examples/test/testpolicy17824.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17824
  namespace: namespace274
spec:
  podSelector:
    matchLabels:
      key25: value29
      key35: value23
      key13: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value22
          key30: value22
          key18: value11
